# kognita

./: .gitignore  Cargo.toml  Changes.md  README.md  build.rs  default.node.toml
crates/block/: Cargo.toml  build.rs
crates/block/proto/: block.proto
crates/block/src/: lib.rs
crates/block/src/builder/: mod.rs
crates/block/src/model/: block.rs  tx.rs
crates/ledger/: Cargo.toml  ledger.md
crates/ledger/src/: cumweight.md  dag.rs  edge.rs  error.rs  mod.rs  node.rs
crates/p2p/: Cargo.toml  build.rs
crates/p2p/src/cfg/: mod.rs
crates/p2p/src/model/: message.rs
crates/p2p/src/node/: config.rs  mod.rs  p2p.rs
crates/p2p/src/service/: mod.rs  post.rs
crates/tx/: Cargo.toml  build.rs  tx.md
crates/tx/model/: tx.proto
crates/tx/proto/: block.proto  header.proto  tx.proto
crates/tx/src/: lib.rs
crates/tx/src/builder/: mod.rs  txbuild.rs  txinbuild.rs  txoutbuild.rs
crates/tx/src/model/: block.rs  header.rs  message.rs  mod.rs  tx.md  tx.rs
crates/tx/src/tx/: tx.rs
crates/tx/src/validator/: mod.rs  validate.md
crates/web/: LICENSE-MIT  README.md
design/: kognita-arch-v0.1.drawio
proto/: message.proto
src/: main.rs  node.rs  run.rs  utils.rs  wallet.rs
src/cfg/: defaults.rs  load.rs  mod.rs
src/cli/: args.rs  mod.rs
src/crypto/: mod.rs  wallet.rs
src/node/: config.rs  mod.rs  p2p.rs  run.rs
src/service/: post.rs
src/util/: mod.rs  rng.rs
