[package]
name = "kognita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    libp2p = { version = "0.51", features = ["tcp", "quic", "dns", "gossipsub", "mdns", "async-std", "noise", "mplex", "yamux", "websocket", "ping", "macros"] }
    futures = "0.3.28"
    async-std = { version = "1.12.0", features = ["attributes"] }
    rand = "0.8.5"
    rand_core = { version = "0.6.4", default-features = false }

    ed25519-dalek = "1.0.1"
    rand_chacha = "0.3.1"

    emojis = "0.6.0"
    lipsum = "0.9.0"
    futures-ticker = "0.0.3"
