[package]
name = "tx"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    tonic = "0.9"
    prost = "0.11"


[build-dependencies]
    tonic-build = { version = "0.9", features = ["prost"] }

