[package]
name = "tx"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    tonic = "0.10.0"
    prost = "0.12.1"
    serde = "1.0.188"
    serde_json = "1.0.107"

[build-dependencies]
    tonic-build = { version = "0.10.0", features = ["prost"] }

